# asciimage

./: README.md  pyproject.toml  requirements.txt
asciimage/: convert.py  preprocess.py
fixtures/: cat0_str32.txt
models/: lenet_5_emnist.pt  lenet_5_mnist.pt
tests/: test_asciimage.py
